[package]
name = "micron"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies.sdl2]
version = "*"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies]
sdl2_timing = "0.2.0"
vector2d = "2.2.0"
rand = "0.8.4"